Vragen scherm basis opstelling
layout aangepast profile icon toegevoegd

--- a/Frontend/css/screen.css
+++ b/Frontend/css/screen.css
@@ -83,7 +83,14 @@
     --global-input-focus-boxShadowColor: var(--global-color-alpha-x-transparent);
     --global-input-error-boxShadowColor: var(--global-color-error-x-transparent);
 }
-
+.testincolor{
+/*     background: rgb(251,192,45);
+    background: linear-gradient(45deg, rgba(251,192,45,1) 0%, rgba(255,235,59,1) 70%); */
+    background: rgb(251,192,45);
+background: linear-gradient(0deg, rgba(251,192,45,1) 0%, rgba(255,235,59,1) 70%);
+    /*background: rgb(251,192,45);
+background: radial-gradient(circle, rgba(251,192,45,1) 0%, rgba(255,235,59,1) 70%); */
+}
 /* @media (prefers-color-scheme: dark) {
     :root {
         --global-page-color: White;
@@ -618,7 +625,15 @@ grid
 .c-dashboard__vragen{
     display: grid;
     justify-content: center;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+	align-items: center;
+}
+.c-dashboard__antwoorden{
+    display: grid;
+    grid-gap: 1rem;
+    justify-content: center;
+    grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(2, 1fr);
 	align-items: center;
 }
@@ -650,6 +665,9 @@ grid
 /*
 spacing
 */
+.c-zero_margin{
+    margin: 0;
+}
 .c-spacing{
     display: flex;
     justify-content: space-between;
@@ -657,6 +675,7 @@ spacing
 .c-img__center{
     display: flex;
     justify-content: center;
+    align-items: center;
 }
 .c-table__spacing{
     border-spacing: 16px;
@@ -715,8 +734,17 @@ spacing
     box-shadow: 0 0 0 1px rgba(0,0,0, 0.05), 0 2px 4px rgba(0,0,0,.075);
     overflow: hidden;
 }
+.c-card__antwoorden {
+    --card-borderRadius: var(--global-borderRadius);
+    padding: 8px;
+    background-color: var(--card-backgroundColor, White);
+    border-radius: var(--card-borderRadius, var(--global-borderRadius));
+    box-shadow: 0 0 0 1px rgba(0,0,0, 0.05), 0 2px 4px rgba(0,0,0,.075);
+    overflow: hidden;
+}
 .c-card__vragen {
     --card-borderRadius: var(--global-borderRadius);
+    padding: 8px;
     background-color: var(--card-backgroundColor, White);
     border-radius: var(--card-borderRadius, var(--global-borderRadius));
     box-shadow: 0 0 0 1px rgba(0,0,0, 0.05), 0 2px 4px rgba(0,0,0,.075);
@@ -734,7 +762,9 @@ spacing
     align-items: flex-start;
 
 }
-
+.c-color_white{
+    color: white;
+}
 /* Add padding to child for more flexibility */
 /* .c-card__body,
 .c-card__footer {
