--- a/Frontend/css/screen.css
+++ b/Frontend/css/screen.css
@@ -622,6 +622,12 @@ grid
 	justify-content: center;
 	align-items: center;
 }
+.c-dashboard_onderwerpen{
+    display: grid;
+	/* grid-template-rows: auto minmax(auto,20rem); */
+	justify-content: center;
+	align-items: center;
+}
 .c-dashboard__vragen{
     display: grid;
     justify-content: center;
@@ -660,7 +666,22 @@ grid
 		justify-content: center;
 		align-items: center;
     }
-
+    .c-dashboard_loading {
+        display: grid;
+        padding: 1rem;
+        grid-gap: 4rem;
+		grid-template-columns: repeat(2, 1fr);
+		justify-content: center;
+		align-items: center;
+    }
+    .c-dashboard_onderwerpen{
+        display: grid;
+        padding: 1rem;
+        grid-template-columns: repeat(4, 1fr);
+        /* grid-template-rows: auto minmax(auto,20rem); */
+        justify-content: center;
+        align-items: center;
+    }
 }
 /*
 spacing
