--- a/Frontend/total/css/screen.css
+++ b/Frontend/total/css/screen.css
@@ -673,6 +673,33 @@ input::placeholder {
     grid-row: 17;
 }
 
+.c-range{
+    width: 200px;
+}
+
+.c-sliderticks{
+    display: flex;
+    justify-content: space-between;
+    padding: 0 10px;
+}
+
+.slidecontainer{
+    width: 100%;
+}
+
+.c-sliderticks p {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    width: 1px;
+    background: #D3D3D3;
+    height: 10px;
+    line-height: 40px;
+    margin: 0 0 20px 0;
+  }
+
+
 
 .c-btn-add{
     border-radius: 25px;
