--- a/Frontend/total/css/screen.css
+++ b/Frontend/total/css/screen.css
@@ -521,6 +521,7 @@ input::placeholder {
 
 /* vragen */
 
+
 .c-app__main{
     background-color: #203959;
     background-image: url("../fotos/background2.png");
@@ -528,156 +529,259 @@ input::placeholder {
 
 .c-grid{
     display: grid;
-    grid-template-columns: repeat(8,1fr);
+    grid-template-columns: repeat(18,1fr);
     grid-auto-rows: minmax(10px, auto);
     grid-gap: 10px;
     margin-bottom: 8px;
 }
 
-.c-form{
-    background-color: #fffbf9c9;
+.c-onderwerp-form{
+    margin-top: 60px;
+    height: 80px;
+    background-color: #fffbf98c;
     box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.16);
-    grid-column: 2/8;
-    grid-row: 2/20;
+    grid-column: 5/14;
+    grid-row: 2/5;
+}
+
+.c-bg-oil{
+    background-color: #BF6663;
+    border-radius: 8px;
+   /*  background-image: url("../fotos/background_oil_2.png"); */
+    background-size: 100% 100%;
+    grid-row: 2/50;
+    grid-column: 3/16;
+}
+
+.c-home-btn{
+    border: 1px solid #474242;
+    border-radius: 4px;
+    margin-top: 8px;
+    margin-left: 170px;
+    text-align: center;
+    align-items: center;
+    grid-row: 2;
+    grid-column: 13;
+    width: 110px;
+    height: 40px;
+    background-color: #F6D9CF;
+}
+
+
+.c-margin{
+    margin: 24px;
+}
+
+.c-form{
+    background-color: #fffbf98c;
+    box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.16);
+    grid-column: 5/14;
+    grid-row: 6/22;
  
 }
 
 .c-form-2{
-    background-color: #fffbf9c9;
+    background-color: #fffbf98c;
     box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.16);
-    grid-column: 2/8;
+    grid-column: 5/14;
     grid-row: 24/44;
 }
 
+
 .c-subject{
-    grid-column: 4;
-    grid-row: 2;
-}
-
-.c-subject-2{
-    grid-column: 6;
-    grid-row: 24;
-}
-
-.c-lbl-subject{
-    grid-column: 3;
-    grid-row: 2;
-}
-
-.c-lbl-subject-2{
-    grid-column: 5;
-    grid-row: 24;
-}
-
-.c-label-q-2{
-    grid-column: 3/6;
-    grid-row: 25;
-}
-
-
-.c-input{
-    grid-column: 3/7;
-    grid-row: 4/6;
-}
-
-.c-input-2{
-    grid-column: 3/7;
-    grid-row: 26/28;
-}
-
-.c-label-q{
-    grid-column: 3/8;
+    width: 200px;
+    height: 25px;
+    grid-column: 8/11;
     grid-row: 3;
 }
 
+.c-subject-2{
+    width: 200px;
+    height: 25px;
+    grid-column: 13;
+    grid-row: 25;
+}
+.c-subject-vragen{
+    margin-right: 80px;;
+    margin-top: 12px;
+    width: 200px;
+    height: 27px;
+    grid-column: 13;
+    grid-row: 7;
+}
+
+
+.c-label-q-2{
+    grid-column: 5/8;
+    grid-row: 23;
+}
+
+.c-input-2{
+    grid-column: 5/12;
+    height: 40px;
+    border-radius: 4px;
+    margin-left: 24px;
+    grid-row: 25/27;
+    border: 1px solid black;
+    border-radius: var(--global-borderRadius);
+    background-color: #FFFBF9;
+    color: var(--global-input-color);
+    font-family: inherit;
+    font-size: 16px;
+    line-height: calc(var(--global-baseline) * 3);
+    padding: calc(var(--global-baseline) * 1.5 - var(--global-borderWidth)) var(--global-whitespace-md);
+    outline: none;
+    transition: border var(--global-transition-timing-alpha), box-shadow var(--global-transition-timing-alpha);
+}
+
+.c-lbl-antwoorden{
+    margin-left: 80px;
+    grid-column: 5;
+    grid-row: 9;
+}
+.c-lbl-home{
+    margin-top: 6px;
+    margin-right:4px;
+}
+
 .c-radio-a{
-    grid-column: 3/4;
-    grid-row: 8;
+    grid-row: 11;
 }
 
 .c-radio-a-2{
-    grid-column: 3/4;
     grid-row: 30;
 }
 
 .c-radio-b{
-    grid-column: 3/4;
-    grid-row: 10;
+    grid-row: 13;
 }
 
 .c-radio-b-2{
-    grid-column: 3/4;
     grid-row: 32;
 }
 
 .c-radio-c{
-    grid-column: 3/4;
-    grid-row: 12; 
+    grid-row: 15; 
 }
 
 .c-radio-c-2{
-    grid-column: 3/4;
     grid-row: 34;
 }
 
 .c-radio-d{
-    grid-column: 3/4;
-    grid-row: 14;
+    grid-row: 17;
 }
 
 .c-radio-d-2{
-    grid-column: 3/4;
     grid-row: 36;
 }
 
+.c-radiobtn-option{
+    grid-column:5;
+    margin-left: 40px;
+}
+
 .c-input-a{
-    grid-column: 4/7;
-    grid-row: 8;
+    margin-left: 80px;
+    border-radius: 4px;
+    margin-right: 80px;
+    grid-column: 5/14;
+    grid-row: 11;
+    
 }
 
 .c-input-a-2{
-    grid-column: 4/7;
+    margin-left: 80px;
+    border-radius: 4px;
+    margin-right: 80px;
+    grid-column: 5/14;
     grid-row: 30;
 }
 
 .c-input-b{
-    grid-column: 4/7;
-    grid-row: 10;
+    margin-left: 80px;
+    border-radius:4px;
+    margin-right: 80px;
+    grid-column: 5/14;
+    grid-row: 13;
 }
 
 .c-input-b-2{
-    grid-column: 4/7;
+    margin-left: 80px;
+    border-radius: 4px;
+    margin-right: 80px;
+    grid-column: 5/14;
     grid-row: 32;
 }
 
 .c-input-c{
-    grid-column: 4/7;
-    grid-row: 12;
+    margin-left: 80px;
+    border-radius: 4px;
+    margin-right: 80px;
+    grid-column: 5/14;
+    grid-row: 15;
 }
 
 .c-input-c-2{
-    grid-column: 4/7;
+    margin-left: 80px;
+    border-radius: 4px;
+    margin-right: 80px;
+    grid-column: 5/14;
     grid-row: 34;
 }
 
 .c-input-d{
-    grid-column: 4/7;
-    grid-row: 14;
+    border-radius:4px;
+    margin-left: 80px;
+    margin-right: 80px;
+    grid-column: 5/14;
+    grid-row: 17;
 }
 
 .c-input-d-2{
-    grid-column: 4/7;
+    margin-left: 80px;
+    border-radius: 4px;
+    margin-right: 80px;
+    grid-column: 5/14;
     grid-row:36;
 }
 
-.c-input-level{
-    grid-column: 4;
-    grid-row: 17;
-}
 
 .c-lbl-level{
-    grid-column: 3;
-    grid-row: 17;
+    grid-column: 5;
+    padding-bottom: 16px;
+    grid-row: 20;
+}
+
+.c-div-level{
+    grid-column: 5;
+    width: 200px;
+    height: 32px;
+    grid-row: 20;
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(3,1px);
+    grid-auto-rows: minmax(1px,auto);
+    background-color: #fffbf9c9;
+    border: 1px solid #474242;
+}
+
+.c-lbl-1{
+    grid-column: 6;
+    padding-bottom: 16px;
+    grid-row: 20;
+}
+
+.c-lbl-2{
+    grid-column: 7;
+    padding-bottom: 16px;
+    grid-row: 20;
+}
+
+.c-lbl-3{
+    grid-column: 8;
+    padding-bottom: 16px;
+    grid-row: 20;
 }
 
 .c-range{
@@ -709,29 +813,47 @@ input::placeholder {
 
 
 .c-btn-add{
-    border-radius: 25px;
-    background-color: #65D86D;
-    color:white;
-    font-size: 24px;
-    grid-column: 6;
-    grid-row: 17;
+    background-image: url("../fotos/plus.png"); 
+    margin-top: 16px;
+    margin-left: 160px;
+    background-size: 100% 100%;
+    width: 40px;
+    height:40px;
+    grid-column: 13;
+    grid-row: 20;
 }
 
 .c-btn-delete{
-    border-radius: 25px;
-    background-color: red;
-    color:white;
-    font-size: 24px;
-    grid-column: 6;
+    width: 40px;
+    height:40px;
+    margin-left: 160px;
+    background-image: url("../fotos/Group\ 664.png");
+    background-size: 100% 100%;
+    grid-column: 13;
     grid-row: 40;
 }
 .c-btn-send-subject{
-    background-color: gray;
-    color:white;
-    font-size: 16px;
-    grid-column: 5;
-    grid-row: 2;
+    background-image: url("../fotos/plus.png");
+    background-size: 100% 100%;
+    margin-left: 160px;
+    width: 40px;
+    height: 40px;
+    grid-column: 13;
+    grid-row: 4;
 }
+
+.c-input-onderwerp{
+    border: 1px solid #474242;
+    margin-bottom: 16px;
+    border-radius:4px;
+    margin-left: 24px;
+    width: 600px;
+    height: 40px;
+    grid-column: 5/11;
+    grid-row: 4;
+}
+
+
 
 
 /* .c-oil-bg{
@@ -791,12 +913,15 @@ input::placeholder {
 }
 
 .c-card {
-    background-image: url("../fotos/background_oil.png");
-    background-size: cover;
+    background-image: url("https://aikovanryssel.github.io/project2IMG/img/svg/loadingscreenblur.svg");
+    background-size: 100% 100%;
+    object-fit: cover;
+    width: 600px;
    /*  background-color: var(--card-backgroundColor); */
-    margin-bottom: var(--global-whitespace);
-    height: 600px;
-    overflow: hidden;
+   /*  margin-bottom: var(--global-whitespace);
+    background-origin: content-box; */
+    /* height: 600px;
+    overflow: hidden; */
     
 }
 
@@ -805,6 +930,7 @@ input::placeholder {
 .c-card__footer {
     padding: var(--global-whitespace) var(--global-whitespace) 0;
     overflow: auto; /* Fix margin collapse */
+    
 }
 
 .c-card__footer {   
@@ -858,7 +984,8 @@ input::placeholder {
     -webkit-appearance: none;
     -moz-appearance: none;
     appearance: none;
-    width: 100%;
+    width: 60%;
+    margin-left: 20%;
     border: var(--global-borderWidth) solid var(--input-borderColor, var(--global-input-borderColor));
     border-radius: var(--global-borderRadius);
     background-color: #FFFBF9;
@@ -870,6 +997,34 @@ input::placeholder {
     outline: none;
     transition: border var(--global-transition-timing-alpha), box-shadow var(--global-transition-timing-alpha);
 }
+
+
+.c-input-vragen{
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+    width: 80%;
+    border: 1px solid #474242;
+    border-radius: var(--global-borderRadius);
+    background-color: #FFFBF9;
+    color: var(--global-input-color);
+    font-family: inherit;
+    line-height: calc(var(--global-baseline) * 3);
+    outline: none;
+    transition: border var(--global-transition-timing-alpha), box-shadow var(--global-transition-timing-alpha);
+    margin-top: 12px;
+    width: 600px;
+    height: 40px;
+    margin-left: 24px;
+    grid-column: 5/12;
+    grid-row: 7;
+}
+
+.c-input-style{
+    border: 1px solid #474242;
+    background-color:#FFFBF9;
+}
+
 
 .c-input:hover {
     border-color: var(--label-color, --global-input-hover-borderColor);
@@ -905,6 +1060,7 @@ more padding on the right to avoid overlap
 .c-label {
     /* --label-color: var(--global-color-neutral-xx-dark); */
     margin-bottom: 0;
+    margin-left: 20%;
     padding-bottom: var(--global-whitespace-sm);
     font-size: 14px;
     line-height: 16px;
@@ -959,7 +1115,8 @@ more padding on the right to avoid overlap
     color: #474242;
     line-height: calc(var(--global-baseline) * 3);
     padding: calc(var(--global-baseline) * 1.5 - var(--global-borderWidth)) var(--global-whitespace-md);
-    width: 100%;
+    width: 60%;
+    margin-left: 20%;
     outline: none;
     box-shadow: var(--button-boxShadow, 0);
     transition: all var(--global-transitionTiming-alpha) var(--global-transitionEasing-out);
