--- a/Frontend/Game/css/screen.css
+++ b/Frontend/Game/css/screen.css
@@ -137,6 +137,7 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   transition: all 300ms ease-in-out;
+  overflow: hidden;
 }
 
 *,
@@ -698,6 +699,10 @@ grid
   bottom: var(--score-bottom-team-b);
   right: 0%;
   width: calc(var(--score--planet-size) * 1.5);
+  transition: all 500ms ease-in-out, transform 1.3s ease-in-out;
+}
+.c-winning-rocket__fly {
+  transition: all 1.3s ease-in-out;
 }
 .c-winner {
   top: 0;
@@ -713,6 +718,21 @@ grid
   text-align: center;
   padding-top: 9%;
   transition: all 500ms ease-in-out;
+}
+/*Keyframe for the winning rocket*/
+@keyframes rocketFly {
+  from {
+    bottom: "-11%";
+    right: "111%";
+  }
+  to {
+    bottom: "47%";
+    right: "3%";
+  }
+}
+/*Animation-class for flying rocket*/
+.c-winning-rocket__fly {
+  /* animation: rocketFly 500ms ease-in-out; */
 }
 @media screen and (min-width: 960px) {
   .c-dashboard__item {
