--- a/Frontend/total/css/screen.css
+++ b/Frontend/total/css/screen.css
@@ -576,7 +576,7 @@ input::placeholder {
     background-color: #fffbf98c;
     box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.16);
     grid-column: 5/14;
-    grid-row: 6/22;
+    grid-row: 6/18;
  
 }
 
@@ -584,7 +584,7 @@ input::placeholder {
     background-color: #fffbf98c;
     box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.16);
     grid-column: 5/14;
-    grid-row: 24/44;
+    grid-row: 21/38;
 }
 
 
@@ -599,7 +599,7 @@ input::placeholder {
     width: 200px;
     height: 25px;
     grid-column: 13;
-    grid-row: 25;
+    grid-row: 22;
 }
 .c-subject-vragen{
     margin-right: 80px;;
@@ -613,7 +613,7 @@ input::placeholder {
 
 .c-label-q-2{
     grid-column: 5/8;
-    grid-row: 23;
+    grid-row: 20;
 }
 
 .c-input-2{
@@ -621,7 +621,7 @@ input::placeholder {
     height: 40px;
     border-radius: 4px;
     margin-left: 24px;
-    grid-row: 25/27;
+    grid-row: 22/24;
     border: 1px solid black;
     border-radius: var(--global-borderRadius);
     background-color: #FFFBF9;
@@ -637,7 +637,13 @@ input::placeholder {
 .c-lbl-antwoorden{
     margin-left: 80px;
     grid-column: 5;
-    grid-row: 9;
+    grid-row: 8;
+}
+
+.c-lbl-antw-2{
+    margin-left: 80px;
+    grid-column: 5;
+    grid-row: 26;
 }
 .c-lbl-home{
     margin-top: 6px;
@@ -645,39 +651,40 @@ input::placeholder {
 }
 
 .c-radio-a{
-    grid-row: 11;
+    grid-row: 9;
 }
 
 .c-radio-a-2{
-    grid-row: 30;
+    grid-row: 27;
 }
 
 .c-radio-b{
-    grid-row: 13;
+    grid-row: 11;
 }
 
 .c-radio-b-2{
-    grid-row: 32;
+    grid-row: 29;
 }
 
 .c-radio-c{
-    grid-row: 15; 
+    grid-row: 13; 
 }
 
 .c-radio-c-2{
-    grid-row: 34;
+    grid-row: 31;
 }
 
 .c-radio-d{
-    grid-row: 17;
+    grid-row: 15;
 }
 
 .c-radio-d-2{
-    grid-row: 36;
+    grid-row: 33;
 }
 
 .c-radiobtn-option{
     grid-column:5;
+    margin-top: 4px;
     margin-left: 40px;
 }
 
@@ -686,7 +693,7 @@ input::placeholder {
     border-radius: 4px;
     margin-right: 80px;
     grid-column: 5/14;
-    grid-row: 11;
+    grid-row: 9;
     
 }
 
@@ -695,7 +702,7 @@ input::placeholder {
     border-radius: 4px;
     margin-right: 80px;
     grid-column: 5/14;
-    grid-row: 30;
+    grid-row: 27;
 }
 
 .c-input-b{
@@ -703,7 +710,7 @@ input::placeholder {
     border-radius:4px;
     margin-right: 80px;
     grid-column: 5/14;
-    grid-row: 13;
+    grid-row: 11;
 }
 
 .c-input-b-2{
@@ -711,7 +718,7 @@ input::placeholder {
     border-radius: 4px;
     margin-right: 80px;
     grid-column: 5/14;
-    grid-row: 32;
+    grid-row: 29;
 }
 
 .c-input-c{
@@ -719,7 +726,7 @@ input::placeholder {
     border-radius: 4px;
     margin-right: 80px;
     grid-column: 5/14;
-    grid-row: 15;
+    grid-row: 13;
 }
 
 .c-input-c-2{
@@ -727,7 +734,7 @@ input::placeholder {
     border-radius: 4px;
     margin-right: 80px;
     grid-column: 5/14;
-    grid-row: 34;
+    grid-row: 31;
 }
 
 .c-input-d{
@@ -735,7 +742,7 @@ input::placeholder {
     margin-left: 80px;
     margin-right: 80px;
     grid-column: 5/14;
-    grid-row: 17;
+    grid-row: 15;
 }
 
 .c-input-d-2{
@@ -743,7 +750,7 @@ input::placeholder {
     border-radius: 4px;
     margin-right: 80px;
     grid-column: 5/14;
-    grid-row:36;
+    grid-row:33;
 }
 
 
@@ -757,7 +764,22 @@ input::placeholder {
     grid-column: 5;
     width: 200px;
     height: 32px;
-    grid-row: 20;
+    grid-row: 17;
+    display: grid;
+    align-items: center;
+    grid-template-columns: repeat(3,1px);
+    grid-auto-rows: minmax(1px,auto);
+    background-color: #fffbf9c9;
+    border: 1px solid #474242;
+}
+
+.c-div-level-2{
+    grid-column: 5;
+    margin-top: 8px;
+    margin-left: 24px;
+    width: 200px;
+    height: 32px;
+    grid-row: 35;
     display: grid;
     align-items: center;
     grid-template-columns: repeat(3,1px);
@@ -820,7 +842,7 @@ input::placeholder {
     width: 40px;
     height:40px;
     grid-column: 13;
-    grid-row: 20;
+    grid-row: 17;
 }
 
 .c-btn-delete{
@@ -830,7 +852,7 @@ input::placeholder {
     background-image: url("../fotos/Group\ 664.png");
     background-size: 100% 100%;
     grid-column: 13;
-    grid-row: 40;
+    grid-row: 35;
 }
 .c-btn-send-subject{
     background-image: url("../fotos/plus.png");
