samenvoegen schermen avatar en loading
data van scherm avatar naar loading sturen

--- a/Frontend/css/screen.css
+++ b/Frontend/css/screen.css
@@ -624,7 +624,11 @@ input::placeholder {
 grid
 
 */
-
+.c-leerkrachtenbtn{
+    position: absolute; 
+    top:2rem; 
+    right:4rem;
+}
 .c-raket{
     position: fixed;
     z-index: 0;
