--- a/Frontend/total/css/screen_vragen.css
+++ b/Frontend/total/css/screen_vragen.css
@@ -149,6 +149,7 @@ body{
     border-radius: 4px;
     width: 140px;
     height: 40px;
+    line-height: 38px;
     background-color: #F6D9CF;
     grid-column: 8;
     grid-row: 1;
@@ -157,7 +158,7 @@ body{
    
 }
 .c-moeilijkheidsgraad[data-moeiljkheidsgraad= "true"]{
-    background-color: red;
+    color: red;
 }
 
 .c-subject-vragen-2
@@ -185,6 +186,7 @@ body{
 :placeholder-shown
 {
     padding-left: 8px;
+    padding-top: 6px;
 }
 
 ::placeholder{
@@ -382,6 +384,8 @@ body{
     box-shadow: 0px 3px 6px 0px rgba(0,0,0,0.16);
 }
 
+
+
 @media (max-width: 1200px) {
     .c-input-onderwerp{
         border: 1px solid #474242;
@@ -391,6 +395,33 @@ body{
         height: 40px;
         grid-row: 2;
         grid-column: 1/2;
+    }
+
+    .c-btn-change{
+        grid-column: 2;
+        margin-left: 40px;
+    }
+
+    .c-btn-delete{
+        grid-column: 2;
+        margin-left: 160px;
+    }
+
+    .c-btn-send-subject{
+        margin-top: 4px;
+        margin-left: 14px;
+    }
+
+    .c-lbl-ingegevenvragen{
+    
+    }
+
+    .c-subject-vragen-show{
+        grid-column: 7;
+    }
+    .c-toonallevragen{
+        grid-column: 8;
+        margin-right: 80px;
     }
 
     .c-input-vragen{
