--- a/Frontend/total/css/screen_vragen.css
+++ b/Frontend/total/css/screen_vragen.css
@@ -62,7 +62,10 @@ body{
 
 .c-onderwerp-form{
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: repeat(8,1fr);
+    grid-auto-columns: minmax(10px, auto);
+    grid-gap:2px;
+    margin-bottom: 8px;
     border-radius: 4px;
     padding: 10px;
     margin: 0 auto;
@@ -76,18 +79,19 @@ body{
 .c-btn-send-subject{
     background-image: url("../fotos/plus.png");
     background-size: 100% 100%;
-    margin-left: 138px;
+    justify-self: end;
+    margin-right: 20px;
     width: 40px;
     height: 40px;
     grid-row: 2;
-    grid-column: 3;
+    grid-column: 6;
 }
 
 .c-input-onderwerp{
     border: 1px solid #474242;
     margin-left: 16px;
     border-radius:4px;
-    width: 800px;
+    width: 750px;
     height: 40px;
     grid-row: 2;
     grid-column: 1/2;
@@ -140,7 +144,7 @@ body{
     background-size: 100% 100%;
     margin-right: 38px;
     grid-column: 8;
-    margin-left:380px;
+    justify-content: end;
     grid-row: 8;
 }
 
@@ -152,8 +156,9 @@ body{
     line-height: 38px;
     background-color: #F6D9CF;
     grid-column: 8;
+    margin-right: 8px;
     grid-row: 1;
-    margin-left: 284px;
+    justify-self: end;
     margin-top: 12px;
    
 }
@@ -257,29 +262,29 @@ body{
     
     border-radius: 4px;
     margin-left: 80px;
-    grid-column: 1/8;
-    width: 800px;
+    grid-column: 1/6;
+    width: 700px;
     grid-row: 3;
 }
 .c-input-b{
     border-radius: 4px;
     margin-left: 80px;
     grid-column: 1/8;
-    width: 800px;
+    width: 700px;
     grid-row: 4;
 }
 .c-input-c{
     border-radius: 4px;
     margin-left: 80px;
     grid-column: 1/8;
-    width: 800px;
+    width: 700px;
     grid-row: 5;
 }
 .c-input-d{
     border-radius: 4px;
     margin-left: 80px;
     grid-column: 1/8;
-    width: 800px;
+    width: 700px;
     grid-row: 6;
 }
 
@@ -325,8 +330,9 @@ body{
     background-size: 100% 100%;
     width: 40px;
     height:40px;
-    margin-left: 130px;
+    justify-self: center;
     grid-column: 8;
+    margin-right: 38px;
     grid-row: 8;
 }
 
@@ -373,8 +379,11 @@ body{
     display: grid;
     grid-template-columns: repeat(8,1fr);
     grid-auto-columns: minmax(10px, auto);
+    grid-template-rows: repeat(8,1fr);
+    grid-auto-rows: minmax(10px, auto);
     grid-gap:2px;
     margin-bottom: 8px;
+    border-radius: 4px;
     margin: 0 auto;
     margin-top: 80px;
     padding: 3px;  
@@ -385,8 +394,7 @@ body{
 }
 
 
-
-@media (max-width: 1200px) {
+@media (max-width: 1400px) {
     .c-input-onderwerp{
         border: 1px solid #474242;
         margin-left: 16px;
@@ -410,10 +418,6 @@ body{
     .c-btn-send-subject{
         margin-top: 4px;
         margin-left: 14px;
-    }
-
-    .c-lbl-ingegevenvragen{
-    
     }
 
     .c-subject-vragen-show{
