--- a/Frontend/total/css/screen_vragen.css
+++ b/Frontend/total/css/screen_vragen.css
@@ -84,7 +84,7 @@ body{
     width: 40px;
     height: 40px;
     grid-row: 2;
-    grid-column: 6;
+    grid-column: 6/8;
 }
 
 .c-input-onderwerp{
@@ -142,13 +142,13 @@ body{
     height:40px;
     background-image: url("../fotos/delete.png");
     background-size: 100% 100%;
-    margin-right: 38px;
     grid-column: 8;
-    justify-content: end;
+    justify-self: center;
     grid-row: 8;
 }
 
 .c-btn-change{
+    
     border: 1px solid #474242;
     border-radius: 4px;
     width: 140px;
@@ -156,7 +156,7 @@ body{
     line-height: 38px;
     background-color: #F6D9CF;
     grid-column: 8;
-    margin-right: 8px;
+    margin-right: 12px;
     grid-row: 1;
     justify-self: end;
     margin-top: 12px;
@@ -331,8 +331,8 @@ body{
     width: 40px;
     height:40px;
     justify-self: center;
+    margin-right: -28px;
     grid-column: 8;
-    margin-right: 38px;
     grid-row: 8;
 }
 
@@ -344,19 +344,19 @@ body{
     grid-auto-rows: minmax(10px, auto);
     grid-gap:2px;
     height: 80px;
-    width: 100%;
+    margin: 0px auto;
+    width: 80%;
 }
 .c-lbl-ingegevenvragen{
     grid-row: 8;
     grid-column:1/4;
+    justify-self: start;
     margin-top: 60px;
-    margin-left: 20px;
 }
 .c-subject-vragen-show{
     grid-row: 8;
     grid-column:5;
     margin-top: 30px;
-    margin-right: 110px;
 }
 
 .c-toonallevragen{
@@ -365,10 +365,11 @@ body{
     width: 140px;
     height: 40px;
     margin-top: 40px;
-    margin-left: 20px;
+    justify-self: start;
     background-color: #F6D9CF;
     grid-row: 8;
-    grid-column: 7;
+    grid-column: 8;
+    margin-right: 12px;
 }
 
 .lbl-middle{
@@ -394,7 +395,7 @@ body{
 }
 
 
-@media (max-width: 1400px) {
+@media (max-width: 1350px) {
     .c-input-onderwerp{
         border: 1px solid #474242;
         margin-left: 16px;
