--- a/Frontend/css/screen_addUser.css
+++ b/Frontend/css/screen_addUser.css
@@ -600,8 +600,13 @@ input::placeholder {
 /*------------------------------------*\
 #COMPONENTS
 \*------------------------------------*/
-.c-box {
+.c-body {
   display: flex;
+  align-items: center;
+  height: 100vh;
+}
+.c-box {
+  display: grid;
   flex-direction: column;
   align-items: center;
   margin-left: auto;
@@ -618,8 +623,6 @@ input::placeholder {
   }
 }
 .c-box__settings {
-  margin-left: auto;
-  margin-right: auto;
   padding: 1rem;
   background-color: #fffbf98c;
   border-radius: calc(1rem / 4);
@@ -685,12 +688,17 @@ input::placeholder {
 }
 .c-title-bar {
   display: grid;
-  grid-template-columns: auto auto;
+  align-items: center;
+  grid-template-columns: 1fr auto;
 }
 .c-field {
   display: grid;
   grid-template-columns: 1fr 1fr;
   margin-bottom: 1rem;
+}
+.c-svg {
+  margin: 0 0 var(--global-whitespace);
+  fill: #474242;
 }
 /*------------------------------------*\
 #States
