--- a/Frontend/css/leerkrachtenvragen.css
+++ b/Frontend/css/leerkrachtenvragen.css
@@ -79,11 +79,11 @@ body{
     background-image: url("../img/plus.png");
     background-size: 100% 100%;
     justify-self: end;
-    margin-right: 20px;
+    margin-right: 24px;
     width: 40px;
     height: 40px;
     grid-row: 2;
-    grid-column: 6/8;
+    grid-column: 8;
 }
 
 .c-input-onderwerp{
@@ -94,6 +94,17 @@ body{
     height: 40px;
     grid-row: 2;
     grid-column: 1/2;
+}
+
+.o-hide-accessible {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    border: 0;
 }
 
 .c-form{
@@ -142,7 +153,9 @@ body{
     background-image: url("../img/delete.png");
     background-size: 100% 100%;
     grid-column: 8;
-    justify-self: center;
+    justify-content: end;
+    justify-self: end;
+    margin-right: 24px;
     grid-row: 8;
 }
 
@@ -332,8 +345,8 @@ body{
     background-size: 100% 100%;
     width: 40px;
     height:40px;
-    justify-self: center;
-    margin-right: -28px;
+    justify-self: end;
+    margin-right: 24px;
     grid-column: 8;
     grid-row: 8;
 }
@@ -409,13 +422,14 @@ body{
     }
 
     .c-btn-change{
-        grid-column: 2;
+        grid-column: 8;
         margin-left: 40px;
     }
 
     .c-btn-delete{
-        grid-column: 2;
-        margin-left: 160px;
+        grid-column: 8;
+        justify-self: center;
+       margin-left: 120px;
     }
 
     .c-btn-send-subject{
