--- a/Frontend/css/leerkrachtenvragen.css
+++ b/Frontend/css/leerkrachtenvragen.css
@@ -40,6 +40,25 @@ body{
     width: 80%;
 }
 
+.c-highscorebtn{
+    display: inline-block;
+    margin-top: 10px;
+    padding: 3px;  
+    border: 1px solid #474242;
+    border-radius: 4px;
+    width: 110px;
+    height: 40px;
+    background-color: #F6D9CF;
+    grid-row: 1;
+    grid-column: 1;  
+    cursor: pointer;
+}
+.lbl-titletekst{
+    grid-row: 1;
+    grid-column: 3/7;
+    color:#474242;
+}
+
 .c-homebtn{
     display: inline-block;
     margin-top: 10px;
@@ -50,6 +69,7 @@ body{
     height: 40px;
     background-color: #F6D9CF;
     grid-column: 8;  
+    cursor: pointer;
 }
 .lbl-home{
     font-size: 20px;
@@ -84,6 +104,7 @@ body{
     height: 40px;
     grid-row: 2;
     grid-column: 8;
+    cursor: pointer;
 }
 
 .c-input-onderwerp{
@@ -157,6 +178,7 @@ body{
     justify-self: end;
     margin-right: 24px;
     grid-row: 8;
+    cursor: pointer;
 }
 
 .c-btn-change{
@@ -172,6 +194,7 @@ body{
     grid-row: 1;
     justify-self: end;
     margin-top: 12px;
+    cursor: pointer;
    
 }
 .c-moeilijkheidsgraad[data-moeiljkheidsgraad= "true"]{
@@ -349,6 +372,7 @@ body{
     margin-right: 24px;
     grid-column: 8;
     grid-row: 8;
+    cursor: pointer;
 }
 
 .c-ingegevenvragen-space{
@@ -385,6 +409,7 @@ body{
     grid-row: 8;
     grid-column: 8;
     margin-right: 12px;
+    cursor: pointer;
 }
 
 .lbl-middle{
@@ -424,6 +449,7 @@ body{
     .c-btn-change{
         grid-column: 8;
         margin-left: 40px;
+        
     }
 
     .c-btn-delete{
@@ -443,6 +469,7 @@ body{
     .c-toonallevragen{
         grid-column: 8;
         margin-right: 80px;
+        cursor: pointer;
     }
 
     .c-input-vragen{
