--- a/Frontend/css/screenhighscore.css
+++ b/Frontend/css/screenhighscore.css
@@ -303,7 +303,7 @@ h1{
     grid-column-end: 1;
     grid-row-start: 5;
     grid-row-end: 5;
-    color: #9B4646;
+    color: #474242;
     
 }
 
@@ -322,7 +322,7 @@ h1{
     grid-column-end: 2;
     grid-row-start: 4;
     grid-row-end: 4;
-    color: #9B4646;
+    color: #474242;
     
 }
 
@@ -342,7 +342,7 @@ h1{
     grid-column-end: 3;
     grid-row-start: 5;
     grid-row-end: 5;
-    color: #9B4646;
+    color: #474242;
 
     
 }
