--- a/Frontend/css/screenhighscore.css
+++ b/Frontend/css/screenhighscore.css
@@ -306,7 +306,16 @@ h1{
     color: #474242;
     
 }
-
+.h0111{
+    z-index: 1;
+    text-align: center;
+    padding-top: 45%;
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 4;
+    grid-row-end: 4;
+    color: #474242;
+}
 .h02 {
     grid-column-start: 2;
     grid-column-end: 2;
@@ -325,7 +334,16 @@ h1{
     color: #474242;
     
 }
-
+.h0222{
+    z-index: 1;
+    text-align: center;
+    margin-top: -5%;
+    grid-column-start: 2;
+    grid-column-end: 2;
+    grid-row-start: 4;
+    grid-row-end: 4;
+    color: #474242;
+}
 .h03 {
     grid-column-start: 3;
     grid-column-end: 3;
@@ -346,7 +364,16 @@ h1{
 
     
 }
-
+.h0333{
+    z-index: 1;
+    text-align: center;
+    padding-top: 45%;
+    grid-column-start: 3;
+    grid-column-end: 3;
+    grid-row-start: 4;
+    grid-row-end: 4;
+    color: #474242;
+}
 .marginh1{
     margin: 0px;
     text-align: center;
